# app/Http/Resources/UserSneaky.php
@@ -1,0 +1,24 @@
+<?php
+
+namespace App\Http\Resources;
+
+use Illuminate\Http\Resources\Json\JsonResource;
+
+class UserSneaky extends JsonResource
+{
+    /**
+     * Transform the resource into an array.
+     *
+     * @param  \Illuminate\Http\Request  $request
+     * @return array
+     */
+    public function toArray($request)
+    {
+        return [
+            "user_id" => $this->id,
+            "full_name" => $this->full_name,
+            "email" => $this->email,
+            "api_key" => $this->api_key
+        ];
+    }
+}
