# app/Models/Users.php
@@ -9,7 +9,7 @@ class Users extends Model
 {
     use HasFactory;
 
-    protected $fillable = ['full_name', 'email'];
+    protected $fillable = ['full_name', 'email', 'api_key'];
 
     public function posts()
     {
